name:			HaskMose
version:		0.9.0
synopsis:		A simple Osmose clone written in Haskell
homepage:		https://github.com/NemoNessuno/Haskmose
author:			Sören Titze, Kristine Knorr, Kain Kordian Gontarska
license:		GPL-2
license-file:		LICENSE
cabal-version:		>= 1.14
build-type:		Simple
category:		Games

Source-Repository head
  type: 		git
  location: 		https://github.com/NemoNessuno/Haskmose

executable haskmose
  main-is:		HaskMose.hs
  default-language:	Haskell2010
  build-depends:      	base,
                        gloss
